<resources>
    <string name="ui_download_system_interrupted">Android остановил фоновую загрузку. Очередь продолжится при открытии приложения.</string>
    <string name="ui_update_system_interrupted">Android остановил фоновую загрузку обновления. Откройте приложение и повторите загрузку.</string>
    <string name="ui_download_source_cooldown">Источник временно ограничил скачивание. Повтор через %1$d мин.</string>
    <string name="app_name">YummyDroid</string>
    <string name="search_hint">Поиск аниме</string>
    <string name="pip_not_supported_device">Режим окна не поддерживается этим устройством</string>
    <string name="pip_rejected">Android отклонил переход в режим окна</string>
    <string name="pip_open_failed">Не удалось открыть режим окна</string>
    <string name="pip_pause">Пауза</string>
    <string name="pip_play">Воспроизвести</string>
    <string name="player_back">Назад</string>
    <string name="player_previous">Предыдущая серия</string>
    <string name="player_next">Следующая серия</string>
    <string name="player_play_pause">Воспроизвести или поставить на паузу</string>
    <string name="player_watch">Смотреть</string>
    <string name="player_voice">Озвучка</string>
    <string name="player_source">Источник</string>
    <string name="player_quality">Качество</string>
    <string name="player_subtitles">Субтитры</string>
    <string name="player_subscription">Подписка</string>
    <string name="player_speed">Скорость</string>
    <string name="player_pip">PiP</string>
    <string name="player_cast">Трансляция</string>
    <string name="player_cast_stop">Остановить трансляцию</string>
    <string name="player_cast_episode_format">Серия %1$s</string>
    <string name="player_cast_connection_failed">Не удалось подключиться к устройству</string>
    <string name="mr_chooser_title">Трансляция на устройство</string>
    <string name="mr_chooser_looking_for_devices">Поиск устройств...</string>
    <string name="mr_chooser_searching">Поиск устройств</string>
    <string name="mr_chooser_zero_routes_found_title">Устройства не найдены</string>
    <string name="mr_chooser_wifi_learn_more"><a href="https://support.google.com/chromecast/?p=trouble-finding-devices">Подробнее</a></string>
    <string name="mr_chooser_wifi_warning_description_phone">Убедитесь, что устройство подключено к той же сети Wi-Fi, что и телефон.</string>
    <string name="mr_chooser_wifi_warning_description_tablet">Убедитесь, что устройство подключено к той же сети Wi-Fi, что и планшет.</string>
    <string name="mr_chooser_wifi_warning_description_tv">Убедитесь, что устройство подключено к той же сети Wi-Fi, что и телевизор.</string>
    <string name="mr_chooser_wifi_warning_description_watch">Убедитесь, что устройство подключено к той же сети Wi-Fi, что и часы.</string>
    <string name="mr_chooser_wifi_warning_description_car">Убедитесь, что устройство подключено к той же сети Wi-Fi, что и автомобиль.</string>
    <string name="mr_chooser_wifi_warning_description_unknown">Убедитесь, что оба устройства подключены к одной сети Wi-Fi.</string>
    <string name="player_zero_time">00:00</string>
    <string name="player_skip_countdown">%1$s %2$d</string>
    <string name="ui_about">О программе</string>
    <string name="ui_about_312416">О программе</string>
    <string name="ui_account">Аккаунт</string>
    <string name="ui_active_count">Активно %1$d</string>
    <string name="ui_add">Добавить</string>
    <string name="ui_added">Добавлено</string>
    <string name="ui_advanced_mode">Расширенный режим</string>
    <string name="ui_age">Возраст</string>
    <string name="ui_age_rating">Возрастной рейтинг</string>
    <string name="ui_all">Все</string>
    <string name="ui_all_available_episodes_are_already_downloaded">Все доступные серии уже скачаны</string>
    <string name="ui_all_downloaded_variants">Все скачанные варианты</string>
    <string name="ui_all_ef8ff2">все</string>
    <string name="ui_all_episodes">Все серии</string>
    <string name="ui_all_selected_episodes_are_already_downloaded">Все выбранные серии уже скачаны</string>
    <string name="ui_already_downloaded">Уже скачано</string>
    <string name="ui_already_downloaded_episodes_with_the_same_quality_will_be_skipped">Уже скачанные серии с тем же качеством будут пропущены</string>
    <string name="ui_anime">Аниме</string>
    <string name="ui_anime_card_not_found">Карточка не найдена</string>
    <string name="ui_anime_release_order">Порядок выхода аниме</string>
    <string name="ui_announcements">Анонсы</string>
    <string name="ui_app_and_content_language">Язык контента</string>
    <string name="ui_app_notifications">Уведомления приложения</string>
    <string name="ui_apply">Применить</string>
    <string name="ui_auto">Авто</string>
    <string name="ui_automatic_marks">Автоматические метки</string>
    <string name="ui_autoplay_next_episode">Автовоспроизведение следующей серии</string>
    <string name="ui_available_offline">Доступно офлайн</string>
    <string name="ui_back">Назад</string>
    <string name="ui_browse_catalog">Каталог</string>
    <string name="ui_browse_downloads">Загрузки</string>
    <string name="ui_browse_history">История</string>
    <string name="ui_browse_schedule">Расписание</string>
    <string name="ui_buffer_size">Объём буфера</string>
    <string name="ui_cancel">Отмена</string>
    <string name="ui_cancel_download">Отменить загрузку</string>
    <string name="ui_cancelled">Отменено</string>
    <string name="ui_cache_size">Кэш: %1$s</string>
    <string name="ui_card_size">Размер карточек</string>
    <string name="ui_catalog_and_appearance">Каталог и оформление</string>
    <string name="ui_catalog_is_empty">Каталог пуст</string>
    <string name="ui_check">Проверить</string>
    <string name="ui_check_updates_on_startup">Проверять обновления при запуске</string>
    <string name="ui_checking_available_quality">Проверка доступного качества</string>
    <string name="ui_checking_quality">проверка качества</string>
    <string name="ui_choose_voice">Выбери озвучку</string>
    <string name="ui_clear">Очистить</string>
    <string name="ui_clear_cache">Очистить кэш</string>
    <string name="ui_close">Закрыть</string>
    <string name="ui_comment">Комментарий</string>
    <string name="ui_comments">Комментарии</string>
    <string name="ui_compact">Компактный</string>
    <string name="ui_continue">Продолжить</string>
    <string name="ui_continue_watching">Продолжить просмотр?</string>
    <string name="ui_could_not_open_the_site">Не удалось открыть сайт</string>
    <string name="ui_decoder">Декодер</string>
    <string name="ui_default_quality">Качество по умолчанию</string>
    <string name="ui_delete">Удалить</string>
    <string name="ui_delete_anime">Удалить аниме</string>
    <string name="ui_delete_downloaded_episode">Удалить скачанную серию</string>
    <string name="ui_delete_episode">Удалить серию</string>
    <string name="ui_delete_watch_progress_for_all_episodes_of_this_anime">Удалить данные просмотра всех серий этого аниме?</string>
    <string name="ui_director">Режиссёр</string>
    <string name="ui_disable">Отключить</string>
    <string name="ui_domain_is_already_in_the_list">Домен уже в списке</string>
    <string name="ui_domains">доменов</string>
    <string name="ui_done">Готово</string>
    <string name="ui_download">Скачать</string>
    <string name="ui_download_channel_description">Статус загрузки серий</string>
    <string name="ui_download_channel_name">Загрузки</string>
    <string name="ui_download_episode">Скачать серию</string>
    <string name="ui_download_missing_episodes_only">Скачивать только отсутствующие серии</string>
    <string name="ui_download_network_waiting">Ожидание сети</string>
    <string name="ui_download_network_waiting_unmetered">Ожидание Wi-Fi или Ethernet</string>
    <string name="ui_download_notification_idle_text">Очередь загрузок</string>
    <string name="ui_download_notification_idle_title">YummyDroid</string>
    <string name="ui_download_notification_progress">%1$d из %2$d</string>
    <string name="ui_download_notification_title">Скачивание серий</string>
    <string name="ui_download_over_mobile_data">Скачивать через мобильный интернет</string>
    <string name="ui_download_unavailable_offline">Скачивание недоступно в оффлайн-режиме</string>
    <string name="ui_download_plan">План загрузки</string>
    <string name="ui_download_plan_completed">Скачано %1$d из %2$d</string>
    <string name="ui_download_plan_completed_with_errors">Скачано %1$d из %2$d, ошибок: %3$d</string>
    <string name="ui_download_plan_failed">Не удалось выполнить план загрузки</string>
    <string name="ui_download_plan_loading">Выполняется план</string>
    <string name="ui_download_plans">Планы загрузки</string>
    <string name="ui_download_queue">Очередь загрузок</string>
    <string name="ui_download_retry_message">Попытка %1$d из %2$d: %3$s</string>
    <string name="ui_download_speed_limit">Ограничение скорости</string>
    <string name="ui_download_speed_limit_warning">На скорости 10 МБ/с и выше загрузка может срываться из-за ограничений плееров</string>
    <string name="ui_download_speed_megabytes_per_second">МБ/с</string>
    <string name="ui_download_start_failed">Не удалось начать загрузку</string>
    <string name="ui_download_stopped">Загрузка остановлена</string>
    <string name="ui_download_threads">Потоки загрузки</string>
    <string name="ui_downloaded">Скачано</string>
    <string name="ui_downloaded_bc4f6a">Скачано</string>
    <string name="ui_downloaded_episodes">Скачанные серии</string>
    <string name="ui_downloaded_episodes_cached_anime_cards_and_local_playback_progress_wil">Очередь загрузок будет отменена и очищена. Затем будут удалены скачанные серии, кэш приложения и локальный прогресс просмотра. Аккаунт и авторизация останутся.</string>
    <string name="ui_downloaded_fae287">скачано</string>
    <string name="ui_downloads">Загрузки</string>
    <string name="ui_dropped">Брошено</string>
    <string name="ui_duration">Длительность</string>
    <string name="ui_email">Email</string>
    <string name="ui_empty">Пусто</string>
    <string name="ui_episode">Серия</string>
    <string name="ui_episode_4da919">Серия</string>
    <string name="ui_episode_already_downloaded">Серия уже скачана</string>
    <string name="ui_episode_availability">Доступно %1$d</string>
    <string name="ui_episode_count">Количество серий</string>
    <string name="ui_episode_few">серии</string>
    <string name="ui_episode_is_already_out">Серия %1$d уже вышла</string>
    <string name="ui_episode_many">серий</string>
    <string name="ui_episode_one">серия</string>
    <string name="ui_episodes">Серии</string>
    <string name="ui_error">Ошибка</string>
    <string name="ui_exclude_genres">Исключить жанры</string>
    <string name="ui_exclude_marks">Исключить метки</string>
    <string name="ui_excluded_by_ranges">Исключено диапазонами</string>
    <string name="ui_fall">Осень</string>
    <string name="ui_favorites">Любимые</string>
    <string name="ui_filters">Фильтры</string>
    <string name="ui_find_anime">Найти аниме</string>
    <string name="ui_fix_episode_ranges">Исправьте диапазоны серий</string>
    <string name="ui_forgot_password">Забыли пароль?</string>
    <string name="ui_from">От</string>
    <string name="ui_from_dba126">от</string>
    <string name="ui_from_start">С начала</string>
    <string name="ui_full_dubbing">Полное дублирование</string>
    <string name="ui_genres">Жанры</string>
    <string name="ui_hardware">Аппаратный</string>
    <string name="ui_has_subtitles">Есть субтитры</string>
    <string name="ui_history_is_empty">История пуста</string>
    <string name="ui_invalid_domain">Некорректный домен</string>
    <string name="ui_do_not_add">Не добавлять</string>
    <string name="ui_language_english">English</string>
    <string name="ui_language_russian">Русский</string>
</resources>